--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <p>Como forma de respeito e reverência ao local sagrado, pedimos gentilmente que todos se vistam com modéstia.</p>
       </div>
       <div class="details">
-        <i class="fas fa-user-tie"></i>
+        <i class="fas fa-gift"></i>
         <h3 class="details-heading">Presentes</h3>
         <p>Preencher.</p>
       </div>
       <div class="details">
         <i class="fas fa-clipboard-check"></i>
         <h3 class="details-heading" id="rsvp">Confirmação de Presença</h3>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSey_L7tB9CxNdDdizNOquuTS0_rqIF6s2W3IxqPp9dKITYCLQ/viewform?embedded=true" width="350" height="947" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSey_L7tB9CxNdDdizNOquuTS0_rqIF6s2W3IxqPp9dKITYCLQ/viewform?embedded=true" width="640" height="947" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- Include Embedded link of Google Form here in place of # -->
         <!-- <iframe title="RSVP" src="" style="width:100%;" height="960" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
       </div>
