--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       <div class="details">
         <i class="fas fa-gift"></i>
         <h3 class="details-heading">Presentes</h3>
-        <p>Preencher.</p>
+        <p>Para melhor comodidade e flexibilidade, pedimos que os presentes sejam dados em dinheiro.</p>
+        <p>Pix: 48991508677 ou 51999253807</p>
       </div>
       <div class="details">
         <i class="fas fa-clipboard-check"></i>
